src/objects/Test_Cases1__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test scripts that need to be run.(Edition2)
Responsible person：Samuel Liu</description>
    <fields>
        <fullName>Case_No__c</fullName>
        <label>Case No.</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_description__c</fullName>
        <label>Case description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Categary__c</fullName>
        <label>Catagory</label>
        <picklist>
            <picklistValues>
                <fullName>Catagory1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_Failed_Step__c</fullName>
        <label>*Count Failed Step</label>
        <summaryFilterItems>
            <field>Test_step1__c.Actual_Results__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Passed_Step__c</fullName>
        <label>*Count Passed Step</label>
        <summaryFilterItems>
            <field>Test_step1__c.Actual_Results__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Steps__c</fullName>
        <label>*Count Steps</label>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <picklist>
            <controllingField>Finction__c</controllingField>
            <picklistValues>
                <fullName>Feature1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finction__c</fullName>
        <label>Function</label>
        <picklist>
            <controllingField>Categary__c</controllingField>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Requisite__c</fullName>
        <label>Pre Requisite</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_No__c</fullName>
        <label>Reference No.</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>executor__c</fullName>
        <label>Executor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Cases1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>